@@ -1024,6 +1024,7 @@ Peter Parente
 Alexandre Parenteau
 Dan Parisien
 William Park
+Claude Paroz
 Heikki Partanen
 Harri Pasanen
 Gaël Pasgrimaud
